# max2

./: .drone.yml  Cargo.toml  README.md
.github/workflows/: bench.yml  test.yml
benches/: race.rs
src/: lib.rs
