[package]
name = "max2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"
rand = "0.6.5"

[[bench]]
name = "race"
harness = false

[dependencies]
num-traits = "0.2.15"
rayon = "1.5.2"
